<resources>
    <string name="app_name">Github</string>
    <string name="no_user_found">No user found</string>
    <string name="github_username">github_username</string>
    <string name="avatar_image">avatar_image</string>
    <string name="main_following">Following: xx</string>
    <string name="main_followers">Followers: xx</string>
    <string name="find_github_username_here">Find github username here ...</string>
    <string name="something_wrong">Oops Something Wrong</string>
    <string name="githubusername">GithubUsername</string>
    <string name="github_name">github name</string>
    <string name="following_number">%d following</string>
    <string name="followers_number">%d followers</string>
    <string name="user_location">user_location</string>
    <string name="user_company">user_company</string>
    <string name="repositories_number">%d repositories</string>
    <string name="following_tab">Following</string>
    <string name="followers_tab">Followers</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>