<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/root_section"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/profile_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_brown"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profileImage"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="30dp"
                android:scaleType="centerCrop"
                tools:src="@drawable/img_placeholder" />

            <TextView
                android:id="@+id/detail_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="4dp"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                android:hint="@string/github_name"/>

            <TextView
                android:id="@+id/detail_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/githubusername"
                android:textAlignment="center"
                android:textColor="@color/blue_black"
                android:textSize="16sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/detail_following"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/following_number"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/detail_followers"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/followers_number"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:textStyle="bold" />
            </LinearLayout>


            <TextView
                android:id="@+id/detail_location"
                style="@style/TextViewDetail"
                android:hint="@string/user_location"
                android:textAlignment="viewStart"
                app:drawableStartCompat="@drawable/ic_location" />

            <TextView
                android:id="@+id/detail_company"
                style="@style/TextViewDetail"
                android:hint="@string/user_company"
                android:textAlignment="viewStart"
                app:drawableStartCompat="@drawable/ic_company" />

            <TextView
                android:id="@+id/detail_repository"
                style="@style/TextViewDetail"
                android:text="@string/repositories_number"
                android:textAlignment="viewStart"
                app:drawableStartCompat="@drawable/ic_repository" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/tab_layout_section"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_brown"
            android:orientation="vertical">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/medium_brown"
                android:contentDescription="@string/app_name"
                app:tabTextColor="@color/black" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name" />

        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/white"
        android:clickable="true"
        android:contentDescription="favorites button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_unfavorite"
        app:tint="@color/red" />

    <ProgressBar
        android:id="@+id/progress_bar_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <include
        android:id="@+id/view_error"
        layout="@layout/view_error"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>